--- a/edu/templates/cat_list.html
+++ b/edu/templates/cat_list.html
@@ -16,9 +16,8 @@
             {% for category in object_list %}
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{ category.title }}</h5>
+                    <h5 class="card-title"><a href="/cat/{{ category.id }}"）>{{ category.title }}</a></h5>
                     <p class="card-text">{{ category.summary }}</p>
-                    <a href="/cat/{{ category.id }}" class="btn btn-primary">移動する</a>
                 </div>
             </div>
             {% endfor %}
